--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   injectable: ^2.5.0
   get_it: ^8.0.3
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
